[package]
name = "yew-janken"
version = "0.1.0"
authors = ["z0ff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", features = ["toml", "yaml", "msgpack", "cbor"] }
rand = { version = "0.7.2", features = ["stdweb"] }